--- a/Resume.html
+++ b/Resume.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <object class="container internal" data="Vinay_Resume." type="application/pdf">
+    <object class="container internal" data="Vinay_Resume.pdf" type="application/pdf">
       <p class="top">Your browser doesn't support PDF files. <a href="Vinay_Resume.pdf">Please Download</a> instead.</p>
     </object>
   </body>
