--- a/Resume.html
+++ b/Resume.html
@@ -21,12 +21,12 @@
 
       p.top {
         text-align: center;
-        font-size: 24px; 
+        font-size: 36px; 
       }
     </style>
   </head>
   <body>
-    <object class="container internal" data="Vinay_Resume.pdf" type="application/pdf">
+    <object class="container internal" data="Vinay_Resume." type="application/pdf">
       <p class="top">Your browser doesn't support PDF files. <a href="Vinay_Resume.pdf">Please Download</a> instead.</p>
     </object>
   </body>
