--- a/Resume.html
+++ b/Resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PDF Example by Object Tag</title>
+    <title>Vinay Reddy P</title>
     <style>
       .internal {
         width: 100%;
